css/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 62.5%;
}

body {
  color: #040f0f;
  font-family: roboto;
}

/* GENERAL STYLES */
.container {
  max-width: 120rem;
  margin: 0 auto;
}

.grid {
  display: grid;
  column-gap: 4.8rem;
}

.grid--5-cols {
  grid-template-columns: repeat(5, 1fr);
}

.grid--4-cols {
  grid-template-columns: repeat(4, 1fr);
}

.grid--3-cols {
  grid-template-columns: repeat(3, 1fr);
}

.grid--2-cols {
  grid-template-columns: 1fr 1fr;
}

.grid--1-cols {
  grid-template-columns: 1fr;
}

.heading-primary {
  font-weight: 500;
  font-size: 4.8rem;
  margin-bottom: 4.8rem;
}

.heading-secondary {
  font-size: 2.4rem;
  text-transform: uppercase;
  font-weight: 500;
  margin-bottom: 2.4rem;
}

.link:link,
.link:visited {
  display: inline-block;
  text-decoration: none;
  background-color: #c9fbff;
  font-size: 1.8rem;
  font-weight: 700;
  letter-spacing: 1px;
  color: #040f0f;
  padding: 1.2rem 2.4rem;
  border-radius: 33px;

  transition: all 0.3s;
}

.link:hover,
.link:active {
  box-shadow: inset 0 0 0 3px #c9fbff;
  background-color: #fff;
}

.link-2:link,
.link-2:visited {
  color: #392427;
  font-weight: 500;
  line-height: 1.3;
  transition: all 0.3s;
}

.link-2:active,
.link-2:hover {
  color: #230c0f;
}

/*****************/
/**** NAVBAR *****/
/*****************/

.header {
  display: grid;
  justify-items: end;
  align-content: center;
  background-color: #c2fcf7;
  height: 8rem;

  position: fixed;
  top: 0;
  left: 0;
  right: 0;
}

.main-navbar li {
  list-style: none;
  font-weight: 600;
  font-size: 2.4rem;
}

.navbar-list {
  display: flex;
  gap: 3.6rem;
  align-items: center;

  margin-right: 4.8rem;
}

.nav-link:link,
.nav-link:visited {
  text-decoration: none;
  color: #040f0f;

  transition: all 0.3s;
}

.nav-link:hover,
.nav-link:active {
  color: #4f5757;
}

/*****************/
/**** WELCOME *****/
/*****************/

.welcome {
  margin-top: 8rem;
  padding: 9.6rem 3.6rem 0 3.6rem;
  margin-bottom: 9.6rem;
}

.subheading {
  font-weight: 300;
  font-size: 3.6rem;
  text-transform: uppercase;
}

.welcome-btns {
  display: grid;
  grid-template-columns: 10rem 10rem 10rem;
  column-gap: 2.4rem;
  margin-bottom: 2.4rem;
  align-items: center;
  justify-items: center;
}

.btn {
  border: none;
  padding: 1.2rem 2.4rem;
  background-color: #c9fbff;
  font-size: 1.6rem;
  font-weight: 700;
  border-radius: 33px;
  cursor: pointer;

  transition: all 0.3s;
}

.btn:hover {
  background-color: #c2fcf7;
  color: #000;
}

.desc {
  font-size: 1.8rem;
  line-height: 1.5;
  margin-bottom: 1.2rem;
  display: none;
}

.desc-show {
  display: block;
}

.btn-selected,
.btn-selected:hover {
  background-color: #85bdbf;
}

.course-code-link:link,
.course-code-link:visited {
  color: #392427;
  font-weight: 500;
  transition: all 0.3s;
}

.course-code-link:active,
.course-code-link:hover {
  color: #230c0f;
}

/*****************/
/**** SKILLS *****/
/*****************/

.skills {
  margin-bottom: 9.6rem;
  padding: 0 3.6rem;
}

.skills-box {
  margin-bottom: 5.6rem;
}

.skills ul {
  display: flex;
  flex-direction: column;
  gap: 2.4rem;
}

.skills li {
  list-style: none;
  font-size: 1.8rem;
}

.certificates {
  grid-column: 4 / -1;
}

.resume-link {
  justify-items: center;
  align-items: center;
}

/*****************/
/**** PROJECTS *****/
/*****************/
.section-projects {
  margin-bottom: 9.6rem;
  padding: 0 3.6rem;
}

.webpages {
  margin-bottom: 4.8rem;
}

.project-tile {
  background-color: #c9fbff;
  padding: 4.8rem;
  border-radius: 11px;
  box-shadow: 4px 2px 3px #f7f7f7;

  transition: all 0.4s;
}

.project-tile:hover {
  transform: scale(1.1);
}

.project-name {
  font-size: 1.8rem;
  font-weight: 500;
  margin-bottom: 2.4rem;
}

.project-links {
  font-size: 1.6rem;
}

.pens {
  margin-bottom: 5.6rem;
}

.profile-links {
  align-items: center;
  justify-items: center;
}

/*****************/
/**** FOOTER *****/
/*****************/
footer {
  border-top: 2px solid #f7f7f7;
  padding: 3.6rem;
}

.contact-box {
  align-items: center;
  justify-items: center;
  margin-bottom: 3.6rem;
}

footer p {
  font-size: 1.8rem;
  text-align: center;
  margin-bottom: 2.4rem;
}

